fix for chosen-container on mobile

--- a/src/styles/components/chosen-select.less
+++ b/src/styles/components/chosen-select.less
@@ -27,6 +27,10 @@
   box-sizing: border-box;
 
   transition: 0.2s all;
+
+  .viewport-mobile &{
+    display: block;
+  }
 }
 
 // When updating existing reservation
